add missing `dnsmasq` switch in README
PXE booting requires --dhcp-boot= paramter to be
specified to point to the initial bootloader.

Signed-off-by: Michal Kazior <kazikcz@gmail.com>

--- a/README
+++ b/README
@@ -48,6 +48,7 @@ An example usage of net-flash:
 
 	# Setup PXE environment using `dnsmasq`
 	dnsmasq -d -F 10.0.0.100,10.0.0.200 \
+		--dhcp-boot=pxelinux.0 \
 		--enable-tftp --tftp-root=/srv/pxe
 
 	# Start flashing procedure
